tests/NormalTests/paczka1/fuzzy1/69998512.err
Error in line 3: OGXXJTJyehV A206 65,0
Error in line 11: AOg S47 25,1
Error in line 14: A540 S559 54,2
